appId: com.aiwardrobe
---
- launchApp
- waitForAnimationToEnd:
    timeout: 15000
- tapOn:
    point: "37%,94%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "62%,94%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "87%,94%"
- waitForAnimationToEnd:
    timeout: 5000
